// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be deleted 1`] = `
<div>
  <div>
    <form>
      todo: 
      <input
        data-testid="input"
      />
    </form>
    <ul />
  </div>
</div>
`;

exports[`should have blank in list 1`] = `
<div>
  <div>
    <form>
      todo: 
      <input
        data-testid="input"
      />
    </form>
    <ul>
      <li>
        
        <button
          data-testid="button0"
        >
          remove
        </button>
      </li>
      <li>
        qwerty
        <button
          data-testid="button1"
        >
          remove
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should have list 1`] = `
<div>
  <div>
    <form>
      todo: 
      <input
        data-testid="input"
      />
    </form>
    <ul>
      <li>
        qwerty
        <button
          data-testid="button0"
        >
          remove
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should have lists 1`] = `
<div>
  <div>
    <form>
      todo: 
      <input
        data-testid="input"
      />
    </form>
    <ul>
      <li>
        zxcvbn
        <button
          data-testid="button0"
        >
          remove
        </button>
      </li>
      <li>
        qwerty
        <button
          data-testid="button1"
        >
          remove
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`value should change 1`] = `
<div>
  <div>
    <form>
      todo: 
      <input
        data-testid="input"
      />
    </form>
    <ul />
  </div>
</div>
`;
